eslint-plug-import 설정

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,29 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "plugins": ["import"],
+  "rules": {
+    "import/order": [
+      "error",
+      {
+        "groups": [
+          "builtin",
+          "external",
+          "internal",
+          "parent",
+          "sibling",
+          "index"
+        ],
+        "pathGroups": [
+          { "pattern": "next", "group": "builtin" },
+          { "pattern": "react", "group": "builtin" },
+          { "pattern": "@/components/**", "group": "internal" },
+          { "pattern": "@/util/**", "group": "internal" }
+        ],
+        "alphabetize": {
+          "order": "asc",
+          "caseInsensitive": true
+        }
+      }
+    ]
+  }
 }
