--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "eslint-plugin-import": "^2.27.5",
+    "next-pwa": "^5.6.0",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
   }
