--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,8 @@
 {
   "name": "온라인 셀러 계산기",
   "short_name": "셀러 계산기",
+  "description": "마진, 판매가 등을 계산할 수 있는 웹 앱 계산기",
+  "lang": "ko-Kr",
   "theme_color": "#377cfb",
   "background_color": "#ffffff",
   "display": "standalone",
