useInputs hook 작성 및 적용

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
           { "pattern": "next", "group": "builtin" },
           { "pattern": "react", "group": "builtin" },
           { "pattern": "@/components/**", "group": "internal" },
+          { "pattern": "@/hooks/**", "group": "internal" },
           { "pattern": "@/util/**", "group": "internal" }
         ],
         "alphabetize": {
